--- a/Views/AdminMedicos/AgregarMedico.cshtml
+++ b/Views/AdminMedicos/AgregarMedico.cshtml
@@ -6,8 +6,8 @@
 
 <br />
 
-<div class="row row-cols-1 row-cols-md-3 g-4">
-    <div class="col" style="width:400px"></div>
+<div class="row row-cols-1 row-cols-md-3 g-4" style="display:flex;justify-content:center; align-items:center">
+
     <div class="card h-100" style="width:600px">
         <div class="card" style="top:10px">
             <img src="https://osperyh.org.ar/wp-content/uploads/2023/12/turnos-medicos.jpg" style="object-fit: cover; width: 100%; height: 200px;" alt="Error" />
