Actualizacion final dia 12-11-2024

--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -8,7 +8,7 @@
     <img src="https://img.freepik.com/fotos-premium/imagen-fondo-borrosa-clinica-efecto-desfocado-imagen-contexto-borrosa-imagen-conceptual-publicidad-sanitaria_719646-80724.jpg" alt="Error" class="img-fluid" style="width: 100%; height: 450px; border-radius: 20px; object-fit: cover;" />
 
     <!-- Contenedor para los labels y el botón -->
-    <div class="position-absolute top-50 start-0 translate-middle-y p-4" style="color: #ffffff; background: rgba(0, 0, 0, 0.5); border-radius: 20px; margin-left: 30px;">
+    <div class="position-absolute top-50 start-0 translate-middle-y p-4" style="color: #ffffff; background: rgba(0, 0, 0, 0.5); border-radius: 20px; margin-left: 30px; margin:15px">
         <h1 style="font-size: 2.5rem; font-family: 'Georgia', serif;">Consultorio de Especialidades Médicas</h1>
         <h3 style="font-size: 1.75rem; font-family: 'Georgia', serif;">Cuidamos de Ti con Excelencia Médica</h3>
         <a asp-controller="Servicios" asp-action="Turnos" class="btn btn-outline-light mt-3" style="font-size: 1.25rem; font-family: 'Georgia', serif; border-radius: 12px;">
